# treep-unity

./: CNAME  README.md  flake.nix
.github/: CODEOWNERS
.github/workflows/: build-game.yml  deploy-site.yml
.helix/: config.toml
docs/: flake.nix  index.html
docs/static/style/: appendices.css  chronology.css  style.css
game/: .gitignore  game.sln.DotSettings  windows-installer.iss
game/Assets/: Actions.cs  Actions.inputactions  DefaultNetworkPrefabs.asset  KrommProject.asmdef  LoadPlayground.cs  MainMixer.mixer  Treep.asmdef
game/Assets/Editor/: GameStateManagerEditor.cs  LevelAssemblerEditor.cs  Treep.Editor.asmdef
game/Assets/Materials/: SoftFogCircle.mat
game/Assets/Prefabs/: ExitTrigger.prefab  NormalizedRoomMask.prefab  Player.prefab
game/Assets/Scenes/: Game.unity  Lobby.unity  Menu.unity  Playground.unity  SCENES.md  (+1 more)
game/ProjectSettings/: DynamicsManager.asset  EditorBuildSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset  TagManager.asset
game/UIElementsSchema/: UIElements.xsd  UnityEditor.Experimental.GraphView.xsd  UnityEditor.Tilemaps.xsd
proc-gen-poc/: Cargo.toml  flake.nix
proc-gen-poc/src/: evolver.rs  level.rs  main.rs  render.rs  room.rs
rust-poc/: Cargo.toml  Justfile  flake.nix
rust-poc/assets/: ant-run.aseprite  ant.aseprite  env-sheet.aseprite  world.ldtk
rust-poc/src/: cli.rs  ground.rs  level.rs  lib.rs  main.rs  main_menu.rs  player.rs  room.rs  utils.rs
rust-poc/src/client/: main_menu.rs  mod.rs  player.rs
rust-poc/src/server/: mod.rs
rust-poc/src/shared/: ground.rs  level.rs  mod.rs  player.rs  room.rs
rust-poc/src/shared/generation/: evolver.rs  level.rs  mod.rs  render.rs  room.rs
rust-poc/src/shared/ldtk/: loader.rs  mod.rs  types.rs
site/: Justfile  config.toml  flake.nix
site-vanilla/: about.html  appendices.html  chronology.html  index.html  main.js
site-vanilla/pages/: download.html
site-vanilla/style/: style.css
site/content/: _index.md
site/templates/: base.html  index.html
(+1309 files in other folders)
