[package]
name = "treep"
version = "0.0.0"
edition = "2024"

default-run = "treep"

[dependencies]
bevy = "0.15"
bevy_aseprite_ultra = "0.4"
bevy_ecs_ldtk = { version = "0.11", default-features = false, features = [
  "derive",
  "internal_levels",
] }
bevy-inspector-egui = "0.30"
bevy_quinnet = "0.15"
bevy_rapier2d = { version = "0.29", features = ["debug-render-2d"] }
bevy_replicon = "0.31"
bevy_replicon_quinnet = "0.10"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }

[features]
default = ["client", "server"]

development = [
  "bevy/dynamic_linking",
  "bevy/file_watcher",
  "bevy/bevy_dev_tools",
]
# TODO: setups bevy_inspector_egui's Manual UI
# editor = ["developement"]

client = ["bevy_ecs_ldtk/render"]
server = []


[lints]
[lints.rust]
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# cargo = { level = "warn", priority = -1 }

# missing_docs_in_private_items = "warn"
# unwrap_used = "warn"

cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
enum_glob_use = "allow"
multiple_crate_versions = "allow"
needless_pass_by_value = "allow"
redundant_pub_crate = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
type_complexity = "allow"
[lints.rustdoc]
broken_intra_doc_links = "warn"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
